turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:5: error: value lenght is not a member of Array[java.awt.Color]
  for (i <- 0 to colors.lenght - 1){
                        ^LangtonsAnt:14: error: not found: value avavnce
  avavnce()
  ^